--- a/app/src/main/res/layout/signup_fragment_layout.xml
+++ b/app/src/main/res/layout/signup_fragment_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupFragment"
+    tools:context=".fragments.SignupFragment"
     android:paddingLeft="10dp"
     android:paddingRight="10dp" >
 
@@ -23,12 +23,20 @@
         android:layout_below="@id/signupFirstName" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/signupUsername"
+        android:id="@+id/signupEmail"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="username"
+        android:hint="email"
         android:layout_below="@id/signupLastName" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/signupPhone"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="phone number"
+        android:layout_below="@id/signupEmail" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/signupPassword"
@@ -36,20 +44,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="password"
-        android:layout_below="@id/signupUsername"/>
+        android:layout_below="@id/signupPhone"/>
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/signupCheckbox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Company ?"
-        android:layout_below="@id/signupPassword"/>
+<!--    <com.google.android.material.checkbox.MaterialCheckBox-->
+<!--        android:id="@+id/signupCheckbox"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Company ?"-->
+<!--        android:layout_below="@id/signupPassword"/>-->
 
     <com.google.android.material.button.MaterialButton
+        android:layout_marginTop="10dp"
         android:id="@+id/signupButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signupCheckbox"
+        android:layout_below="@id/signupPassword"
         android:text="Signup" />
 
 
