--- a/app/src/main/res/layout/recycler_view_product_item.xml
+++ b/app/src/main/res/layout/recycler_view_product_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:paddingHorizontal="20dp">
+    android:paddingHorizontal="16dp">
 
     <ImageView
         android:id="@+id/productImage"
@@ -21,6 +21,7 @@
 
 
         <com.google.android.material.textview.MaterialTextView
+            android:layout_marginTop="-9dp"
             android:id="@+id/productName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
