--- a/app/src/main/res/layout/shopping_cart_fragment_layout.xml
+++ b/app/src/main/res/layout/shopping_cart_fragment_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +10,50 @@
         android:id="@+id/cartRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_above="@id/relative_layout1"/>
 
-</FrameLayout>
+    <RelativeLayout
+        android:id="@+id/relative_layout1"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/totlPriceText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Total price"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/totalPriceCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="0 $"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/makeOrderButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/totalPriceCart"
+            android:text="Zamow"
+            android:layout_marginTop="10dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/shareButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/makeOrderButton"
+            android:text="Udostepnij"
+            android:layout_marginBottom="20dp"/>
+
+
+    </RelativeLayout>
+
+</RelativeLayout>
