--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -14,12 +14,22 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="26dp"/>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/languageText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/accountSettingsDarkModeSwitch"
+        android:text="@string/languageText"
+        android:layout_marginHorizontal="26dp"
+        android:textSize="14sp"
+        android:layout_marginTop="10dp"/>
+
     <Spinner
         android:id="@+id/languageSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/accountSettingsDarkModeSwitch"
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="19dp"/>
+        android:layout_below="@id/languageText"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="18dp"/>
 
 </RelativeLayout>
