--- a/app/src/main/res/layout/fragment_product_layout.xml
+++ b/app/src/main/res/layout/fragment_product_layout.xml
@@ -46,7 +46,7 @@
         android:id="@+id/priceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price:"
+        android:text="@string/priceText"
         android:textStyle="bold"
         android:layout_below="@id/productDescriptionSingleProduct"
         android:paddingLeft="25dp"
@@ -69,7 +69,7 @@
         android:id="@+id/addProductToCartButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add to Cart"
+        android:text="@string/addToCartText"
         android:textAllCaps="false"
         android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="20dp"
