--- a/app/src/main/res/layout/logedin_account_fragment.xml
+++ b/app/src/main/res/layout/logedin_account_fragment.xml
@@ -48,7 +48,7 @@
             android:id="@+id/logoutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logout"
+            android:text="@string/logoutText"
             android:backgroundTint="#AAAAAA"
             android:textAllCaps="false"
             android:layout_below="@id/dataContainer"/>
