--- a/app/src/main/res/layout/recycler_view_product_item.xml
+++ b/app/src/main/res/layout/recycler_view_product_item.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Price:"
+            android:text="@string/priceText"
             android:textStyle="bold"/>
 
         <TextView
