--- a/app/src/main/res/layout/recycler_view_product_item.xml
+++ b/app/src/main/res/layout/recycler_view_product_item.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:paddingHorizontal="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="8dp"
+    app:cardCornerRadius="12dp">
+    <RelativeLayout
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:paddingHorizontal="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/productImage"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:src="@drawable/ic_launcher_background" />
 
     <RelativeLayout
         android:id="@+id/productInformation"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="140dp"
         android:layout_toRightOf="@id/productImage"
         android:paddingLeft="20dp">
 
@@ -26,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:text="Product Name"
-            android:textSize="25sp"
+            android:textSize="23sp"
             android:textStyle="bold"
             android:gravity="top"/>
 
@@ -58,5 +65,7 @@
             android:textStyle="bold"/>
 
     </RelativeLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+
+</androidx.cardview.widget.CardView>
