--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -9,7 +9,7 @@
         android:id="@+id/accountSettingsDarkModeSwitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dark mode"
+        android:text="@string/darkMode"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="26dp"/>
