--- a/app/src/main/res/layout/recycler_view_order_item.xml
+++ b/app/src/main/res/layout/recycler_view_order_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/orderNumberText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Order number: "
+        android:text="@string/orderNumber"
         android:textSize="18sp"
         android:textStyle="bold"/>
 
@@ -17,7 +17,7 @@
         android:id="@+id/orderDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date: "
+        android:text="@string/date"
         android:layout_below="@id/orderNumberText"
         android:textSize="18sp"
         android:textStyle="bold"/>
